.infrastructure/kubernetes/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: base_namespace
  labels:
    environment: base_namespace
