.infrastructure/kubernetes/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: demo-python-app
  name: demo-python-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: demo-python-app
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: demo-python-app
    spec:
      containers:
      - image: demo-python-app-ecr:latest
        name: demo-python-app
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8000
        resources: {}
        livenessProbe:
          httpGet:
            path: /api
            port: 8000
            httpHeaders:
              - name: host
                value: localhost
          initialDelaySeconds: 10   
          periodSeconds: 5          
          timeoutSeconds: 2         
          failureThreshold: 3       
        readinessProbe:
          httpGet:
            path: /api
            port: 8000
            httpHeaders:
              - name: host
                value: localhost
          initialDelaySeconds: 5    
          periodSeconds: 10         
          timeoutSeconds: 2
          failureThreshold: 3

status: {}
