.infrastructure/kubernetes/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: demo-python-app
  name: demo-python-app
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8000
  selector:
    app: demo-python-app
status:
  loadBalancer: {}
